2002-06-17  Jody Goldberg <jody@gnome.org>

	* Release 2.0.0

2002-05-29  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=82802
	* gnome-ui-properties.c (setup_dialog) : disable resize.

2002-05-28  Satyajit Kanungo <satyajit.kanungo@wipro.com>

        * gnome-ui-properties.c : Changed the help file link
          to get the help document from user-guide.

2002-05-26  Jody Goldberg <jody@gnome.org>

	* gnome-ui-properties.c (dialog_button_clicked_cb) : Improve handling
	  of help failures.

Sun May 26 11:37:08 2002  Jonathan Blandford  <jrb@gnome.org>

	* gnome-ui-properties.c (main): use APPID instead of argv[0]

2002-05-14  Michael Meeks  <michael@ximian.com>

	* gnome-ui-properties.c 
	(toolbar_to_widget, set_toolbar_style): tolerate
	bogus values sanely.
	Update string to describe bonobo priority text

2002-05-09  Jody Goldberg <jody@gnome.org>

	* gnome-ui-properties.glade : add a help button.
	* gnome-ui-properties.c (dialog_button_clicked_cb) : ditto.

2002-05-06  jacob berkman  <jacob@ximian.com>

	* ui-properties.glade.h: remove unused file

2002-05-06  Anders Carlsson  <andersca@gnu.org>

	* gnome-ui-properties.c: (create_dialog):
	Fix the  support for both_horiz as the toolbar style.
	
	* gnome-ui-properties.glade:
	Re-add all option menu items; Somehow they got lost.
	
2002-04-29  Kjartan Maraas  <kmaraas@gnome.org>

	* ui-properties.glade: Remove translatable="yes" for a wrong case.
	
2002-04-25  Seth Nickell  <snickell@stanford.edu>

	* behavior.desktop.in:

	Move out of advanced, add nicer tooltip (still crummy, but better).

2002-04-25  Jody Goldberg <jody@gnome.org>

	* gnome-ui-properties.c (set_toolbar_style) : Add GTK_TOOLBAR_BOTH_HORIZ

2002-04-10  Seth Nickell  <snickell@stanford.edu>

	* gnome-ui-properties.glade:

	Change "Menu items have icons" to "Menu items can have icons"

2002-04-02  Jody Goldberg <jody@gnome.org>

	* gnome-ui-properties.c (setup_dialog) : suppress warnings.
