@@ -15,17 +15,14 @@
 
   <child internal-child="vbox">
     <widget class="GtkVBox" id="dialog-vbox2">
-      <property name="border_width">2</property>
       <property name="visible">True</property>
       <property name="homogeneous">False</property>
       <property name="spacing">8</property>
 
       <child internal-child="action_area">
 	<widget class="GtkHButtonBox" id="dialog-action_area2">
-	  <property name="border_width">5</property>
 	  <property name="visible">True</property>
 	  <property name="layout_style">GTK_BUTTONBOX_END</property>
-	  <property name="spacing">10</property>
 
 	  <child>
 	    <widget class="GtkButton" id="helpbutton1">
@@ -219,9 +216,8 @@
 				<widget class="button" id="button7">
 				  <property name="visible">True</property>
 				  <property name="tooltip" translatable="yes">New File</property>
-				  <property name="label" translatable="yes">Item 1</property>
-				  <property name="use_underline">True</property>
-				  <property name="stock_pixmap">gtk-new</property>
+				  <property name="label">gtk-new</property>
+				  <property name="use_stock">True</property>
 				</widget>
 			      </child>
 
@@ -229,9 +225,8 @@
 				<widget class="button" id="button8">
 				  <property name="visible">True</property>
 				  <property name="tooltip" translatable="yes">Open File</property>
-				  <property name="label" translatable="yes">Item 2</property>
-				  <property name="use_underline">True</property>
-				  <property name="stock_pixmap">gtk-open</property>
+				  <property name="label">gtk-open</property>
+				  <property name="use_stock">True</property>
 				</widget>
 			      </child>
 
@@ -239,9 +234,8 @@
 				<widget class="button" id="button9">
 				  <property name="visible">True</property>
 				  <property name="tooltip" translatable="yes">Save File</property>
-				  <property name="label" translatable="yes">Item 3</property>
-				  <property name="use_underline">True</property>
-				  <property name="stock_pixmap">gtk-save</property>
+				  <property name="label">gtk-save</property>
+				  <property name="use_stock">True</property>
 				</widget>
 			      </child>
 			    </widget>
@@ -351,15 +345,15 @@
 			  <property name="visible">True</property>
 
 			  <child>
-			    <widget class="GtkImageMenuItem" id="menu1">
+			    <widget class="GtkImageMenuItem" id="File Menu">
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">_Menu</property>
 			      <property name="use_underline">True</property>
 
 			      <child internal-child="image">
-				<widget class="GtkImage" id="image6">
+				<widget class="GtkImage" id="image35">
 				  <property name="visible">True</property>
-				  <property name="stock">gnome-stock-about</property>
+				  <property name="stock">gtk-help</property>
 				  <property name="icon_size">1</property>
 				  <property name="xalign">0.5</property>
 				  <property name="yalign">0.5</property>
@@ -369,17 +363,17 @@
 			      </child>
 
 			      <child>
-				<widget class="GtkMenu" id="menu1_menu">
+				<widget class="GtkMenu" id="File Menu_menu">
 
 				  <child>
 				    <widget class="GtkImageMenuItem" id="menu_item_1">
 				      <property name="visible">True</property>
-				      <property name="label" translatable="yes">Menu Item 1</property>
+				      <property name="label" translatable="yes">_New</property>
 				      <property name="use_underline">True</property>
 				      <signal name="activate" handler="on_menu_item_1_activate"/>
 
 				      <child internal-child="image">
-					<widget class="GtkImage" id="image7">
+					<widget class="GtkImage" id="image36">
 					  <property name="visible">True</property>
 					  <property name="stock">gtk-new</property>
 					  <property name="icon_size">1</property>
@@ -395,12 +389,12 @@
 				  <child>
 				    <widget class="GtkImageMenuItem" id="menu_item_2">
 				      <property name="visible">True</property>
-				      <property name="label" translatable="yes">Menu Item 2</property>
+				      <property name="label" translatable="yes">_Open</property>
 				      <property name="use_underline">True</property>
 				      <signal name="activate" handler="on_menu_item_2_activate"/>
 
 				      <child internal-child="image">
-					<widget class="GtkImage" id="image8">
+					<widget class="GtkImage" id="image37">
 					  <property name="visible">True</property>
 					  <property name="stock">gtk-open</property>
 					  <property name="icon_size">1</property>
@@ -416,11 +410,11 @@
 				  <child>
 				    <widget class="GtkImageMenuItem" id="menu_item_3">
 				      <property name="visible">True</property>
-				      <property name="label" translatable="yes">Menu Item 3</property>
+				      <property name="label" translatable="yes">_Save</property>
 				      <property name="use_underline">True</property>
 
 				      <child internal-child="image">
-					<widget class="GtkImage" id="image9">
+					<widget class="GtkImage" id="image38">
 					  <property name="visible">True</property>
 					  <property name="stock">gtk-save</property>
 					  <property name="icon_size">1</property>
@@ -442,11 +436,11 @@
 				  <child>
 				    <widget class="GtkImageMenuItem" id="menu_item_4">
 				      <property name="visible">True</property>
-				      <property name="label" translatable="yes">Menu Item 4</property>
+				      <property name="label" translatable="yes">_Print</property>
 				      <property name="use_underline">True</property>
 
 				      <child internal-child="image">
-					<widget class="GtkImage" id="image10">
+					<widget class="GtkImage" id="image39">
 					  <property name="visible">True</property>
 					  <property name="stock">gtk-print</property>
 					  <property name="icon_size">1</property>
@@ -468,13 +462,102 @@
 				  <child>
 				    <widget class="GtkImageMenuItem" id="menu_item_5">
 				      <property name="visible">True</property>
-				      <property name="label" translatable="yes">Menu Item 5</property>
+				      <property name="label" translatable="yes">_Quit</property>
 				      <property name="use_underline">True</property>
 
 				      <child internal-child="image">
-					<widget class="GtkImage" id="image11">
+					<widget class="GtkImage" id="image40">
 					  <property name="visible">True</property>
 					  <property name="stock">gtk-quit</property>
+					  <property name="icon_size">1</property>
+					  <property name="xalign">0.5</property>
+					  <property name="yalign">0.5</property>
+					  <property name="xpad">0</property>
+					  <property name="ypad">0</property>
+					</widget>
+				      </child>
+				    </widget>
+				  </child>
+				</widget>
+			      </child>
+			    </widget>
+			  </child>
+
+			  <child>
+			    <widget class="GtkImageMenuItem" id="edit1">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">Edit Menu</property>
+			      <property name="use_underline">True</property>
+			      <signal name="activate" handler="on_edit1_activate" last_modification_time="Thu, 18 Jul 2002 03:49:33 GMT"/>
+
+			      <child internal-child="image">
+				<widget class="GtkImage" id="image41">
+				  <property name="visible">True</property>
+				  <property name="stock">gtk-dialog-info</property>
+				  <property name="icon_size">1</property>
+				  <property name="xalign">0.5</property>
+				  <property name="yalign">0.5</property>
+				  <property name="xpad">0</property>
+				  <property name="ypad">0</property>
+				</widget>
+			      </child>
+
+			      <child>
+				<widget class="GtkMenu" id="edit1_menu">
+
+				  <child>
+				    <widget class="GtkImageMenuItem" id="cut1">
+				      <property name="visible">True</property>
+				      <property name="label" translatable="yes">C_ut</property>
+				      <property name="use_underline">True</property>
+				      <signal name="activate" handler="on_cut1_activate" last_modification_time="Thu, 18 Jul 2002 03:49:33 GMT"/>
+
+				      <child internal-child="image">
+					<widget class="GtkImage" id="image42">
+					  <property name="visible">True</property>
+					  <property name="stock">gtk-cut</property>
+					  <property name="icon_size">1</property>
+					  <property name="xalign">0.5</property>
+					  <property name="yalign">0.5</property>
+					  <property name="xpad">0</property>
+					  <property name="ypad">0</property>
+					</widget>
+				      </child>
+				    </widget>
+				  </child>
+
+				  <child>
+				    <widget class="GtkImageMenuItem" id="copy1">
+				      <property name="visible">True</property>
+				      <property name="label" translatable="yes">_Copy</property>
+				      <property name="use_underline">True</property>
+				      <signal name="activate" handler="on_copy1_activate" last_modification_time="Thu, 18 Jul 2002 03:49:33 GMT"/>
+
+				      <child internal-child="image">
+					<widget class="GtkImage" id="image43">
+					  <property name="visible">True</property>
+					  <property name="stock">gtk-copy</property>
+					  <property name="icon_size">1</property>
+					  <property name="xalign">0.5</property>
+					  <property name="yalign">0.5</property>
+					  <property name="xpad">0</property>
+					  <property name="ypad">0</property>
+					</widget>
+				      </child>
+				    </widget>
+				  </child>
+
+				  <child>
+				    <widget class="GtkImageMenuItem" id="paste1">
+				      <property name="visible">True</property>
+				      <property name="label" translatable="yes">_Paste</property>
+				      <property name="use_underline">True</property>
+				      <signal name="activate" handler="on_paste1_activate" last_modification_time="Thu, 18 Jul 2002 03:49:33 GMT"/>
+
+				      <child internal-child="image">
+					<widget class="GtkImage" id="image44">
+					  <property name="visible">True</property>
+					  <property name="stock">gtk-paste</property>
 					  <property name="icon_size">1</property>
 					  <property name="xalign">0.5</property>
 					  <property name="yalign">0.5</property>
