@@ -1,3 +1,8 @@
+2002-07-17  Jody Goldberg <jody@gnome.org>
+
+	* gnome-ui-properties.glade :  Use stock names
+	  and a 2nd menu item, as per ui-review
+
 2002-06-17  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.0.0
